--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HOLA MUNDO</title>
 </head>
 <body>
-    <P>¡Hola mundo estamos iniciando!   
+    <P>¡Hola mundo estamos iniciando, seguimos aprendiendo, vamos!   
     </P>
 </body>
 </html>
